added header, nav links, linked own css file

--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="/public/index.css" rel="stylesheet">
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body>
-  
+<body class="font-sans">
+  <header>
+    <a href="#maincontent" class="skip-navigation">Ga naar inhoud</a>
+    <nav>
+      <ul>
+        <a href="index.html" class="">Home</a>
+        <a href="/public/resultaten.html" class="">Resultaten</a>
+        <a href="/public/verslag.html" class="">Verslag</a>
+        <a href="/public/Toegankelijkheid.html" class="">Toegankelijkheid</a>
+      </ul>
+    </nav>
+  </header>
 </body>
 </html>
