--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="/public/index.css" rel="stylesheet">
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="font-sans">
@@ -18,5 +17,11 @@
       </ul>
     </nav>
   </header>
+  <main>
+
+  </main>
+  <footer>
+
+  </footer>
 </body>
 </html>
