--- a/index.html
+++ b/index.html
@@ -91,6 +91,6 @@
   <footer>
 
   </footer>
-  <script src="pws/common/navbar.js"></script>
+  <script src="https://github.com/Hizude/pws/blob/master/common/navbar.js"></script>
 </body>
 </html>
