--- a/pages/toegankelijkheid.html
+++ b/pages/toegankelijkheid.html
@@ -80,117 +80,117 @@
           <tr>
             <td><a href="https://www.wuhcag.com/captions-prerecorded/" target="_blank">1.2.2 – Captions (Pre-recorded)</a></td>
             <td>Voorzie bijschriften voor video's met audio</td>
-            <td>Three</td>
+            <td>Nee</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/audio-description-media-alternative-prerecorded/" target="_blank">1.2.3 – Audio Description or Media Alternative (Pre-recorded)</a></td>
             <td>Video met audio heeft een alternatief</td>
-            <td>Three</td>
+            <td>Nee</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/info-and-relationships/" target="_blank">1.3.1 – Info and Relationships</a></td>
             <td>Logische structuur</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/meaningful-sequence/" target="_blank">1.3.2 – Meaningful Sequence</a></td>
             <td>Presenteer inhoud in een zinvolle volgorde</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/sensory-characteristics/" target="_blank">1.3.3 – Sensory Characteristics</a></td>
             <td>Gebruik meer dan één zintuig voor instructies</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/use-of-colour/" target="_blank">1.4.1 – Use of Colour</a></td>
             <td>Gebruik geen presentaties die uitsluitend op kleur zijn gebaseerd</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/audio-control/" target="_blank">1.4.2 – Audio Control</a></td>
             <td>Speel audio niet automatisch af</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/keyboard/" target="_blank">2.1.1 – Keyboard</a></td>
             <td>Toegankelijk met alleen een keyboard</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/no-keyboard-trap/" target="_blank">2.1.2 – No Keyboard Trap</a></td>
             <td>Val toetsenbordgebruikers niet in de val</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/timing-adjustable/" target="_blank">2.2.1 – Timing Adjustable</a></td>
             <td>Tijdslimieten hebben gebruikerscontroles</td>
-            <td>Three</td>
+            <td>Nee</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/pause-stop-hide/" target="_blank">2.2.2 – Pause, Stop, Hide</a></td>
             <td>Bied gebruikerscontroles voor inhoud dat zich verplaatst</td>
-            <td>Three</td>
+            <td>Nee</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/three-flashes-or-below/" target="_blank">2.3.1 – Three Flashes or Below</a></td>
             <td>Geen enkele inhoud knippert meer dan drie keer per seconde</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/bypass-blocks/" target="_blank">2.4.1 – Bypass Blocks</a></td>
             <td>Geef een link ‘Ga naar inhoud’ op</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/page-titled/" target="_blank">2.4.2 – Page Titled</a></td>
             <td>Gebruik handige en duidelijke paginatitels</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/focus-order/" target="_blank">2.4.3 – Focus Order</a></td>
             <td>Logische volgorde</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/link-purpose-in-context/" target="_blank">2.4.4 – Link Purpose (In Context)</a></td>
             <td>Het doel van elke link is duidelijk uit de context</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/language-of-page/" target="_blank">3.1.1 – Language of Page</a></td>
             <td>Pagina heeft een toegewezen taal</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/on-focus/" target="_blank">3.2.1 – On Focus</a></td>
             <td>Elementen veranderen niet wanneer ze focus krijgen</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/on-input/" target="_blank">3.2.2 – On Input</a></td>
             <td>Elementen veranderen niet wanneer ze input krijgen</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/error-identification/" target="_blank">3.3.1 – Error Identification</a></td>
             <td>Identificeer duidelijk invoerfouten</td>
-            <td>Three</td>
+            <td>Nee</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/labels-or-instructions/" target="_blank">3.3.2 – Labels or Instructions</a></td>
             <td>Label elementen en geef instructies</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/parsing/" target="_blank">4.1.1 – Parsing</a></td>
             <td>Geen grote codefouten</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/name-role-value/" target="_blank">4.1.2 – Name, Role, Value</a></td>
             <td>Bouw alle elementen voor toegankelijkheid</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
         </tbody>
       </table>
@@ -207,67 +207,67 @@
           <tr>
             <td><a href="https://www.wuhcag.com/captions-live/" target="_blank">1.2.4 – Captions (Live)</a></td>
             <td>Live video's hebben bijschriften</td>
-            <td>Three</td>
+            <td>Nee</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/audio-description-prerecorded/" target="_blank">1.2.5 – Audio Description (Pre-recorded)</a></td>
             <td>Gebruikers hebben toegang tot audiodescriptie voor video-inhoud</td>
-            <td>Three</td>
+            <td>Nee</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/contrast-minimum/" target="_blank">1.4.3 – Contrast (Minimum)</a></td>
             <td>De contrastverhouding tussen tekst en achtergrond is minimaal 4,5:1</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/resize-text/" target="_blank">1.4.4 – Resize Text</a></td>
             <td>Tekst kan worden vergroot tot 200% zonder verlies van inhoud of functie</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/images-of-text/" target="_blank">1.4.5 – Images of Text</a></td>
             <td>Gebruik geen afbeeldingen van tekst</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/multiple-ways/" target="_blank">2.4.5 – Multiple Ways</a></td>
             <td>Bied verschillende manieren aan om pagina's te vinden</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/headings-and-labels/" target="_blank">2.4.6 – Headings and Labels</a></td>
             <td>Gebruik duidelijke koppen en labels</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/focus-visible/" target="_blank">2.4.7 – Focus Visible</a></td>
             <td>Zorg ervoor dat de toetsenbordfocus zichtbaar en duidelijk is</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/language-of-parts/" target="_blank">3.1.2 – Language of Parts</a></td>
             <td>Vertel gebruikers wanneer de taal op een pagina verandert</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/consistent-navigation/" target="_blank">3.2.3 – Consistent Navigation</a></td>
             <td>Gebruik menu's consequent</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/consistent-identification/" target="_blank">3.2.4 – Consistent Identification</a></td>
             <td>Gebruik pictogrammen en knoppen consequent</td>
-            <td>Three</td>
+            <td>Ja</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/error-suggestion/" target="_blank">3.3.3 – Error Suggestion</a></td>
             <td>Stel oplossingen voor wanneer gebruikers fouten maken</td>
-            <td>Three</td>
+            <td>Nee</td>
           </tr>
           <tr>
             <td><a href="https://www.wuhcag.com/error-prevention-legal-financial-data/" target="_blank">3.3.4- Error Prevention (Legal, Financial, Data)</a></td>
             <td>Verminder het risico op invoerfouten voor gevoelige gegevens</td>
-            <td>Three</td>
+            <td>Nee</td>
           </tr>
         </tbody>
       </table>
