--- a/index.html
+++ b/index.html
@@ -106,6 +106,6 @@
       </ul>
     </div>
   </footer>
-  <script src="common/navbar.js"></script> <!--add /pws/-->
+  <script src="/pws/common/navbar.js"></script>
 </body>
 </html>
