--- a/pages/toegankelijkheid.html
+++ b/pages/toegankelijkheid.html
@@ -56,8 +56,10 @@
     </nav>
   </header>
   <main id="maincontent" class="w-11/12 mt-12 mx-auto">
+    <h1 class="text-white font-bold text-xl lg:text-2xl text-center mb-2">Toegankelijkheid</h1>
+    <p class="mb-6 mx-auto text-center w-9/12">Deze pagina geeft de eisen weer waar deze website aan voldoet qua toegankelijkheid. Sommige eisen, zoals <span class="italic">Voorzie bijschriften voor video's met audio</span>, is niet van toepassing op deze website, omdat deze website geen video's beschikbaar zijn.</p>
     <section id="accessibility-table">
-      <h2 class="lg:text-lg mb-2"><a href="https://www.w3.org/WAI/WCAG2A-Conformance" target="_blank">A level</a></h2>
+      <h2 class="text-lg lg:text-2xl mb-2"><a href="https://www.w3.org/WAI/WCAG2A-Conformance" target="_blank">A level</a></h2>
       <table class="table-fixed lg:text-lg">
         <thead>
           <tr>
@@ -296,7 +298,7 @@
       </ul>
     </div>
   </footer>
-  <script src="/common/navbar.js"></script> <!--add /pws/-->
+  <script src="/pws/common/navbar.js"></script> <!--add /pws/-->
   <style>
     th, td {
       text-align: left;
