--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -56,6 +56,7 @@
     </nav>
   </header>
   <main id="maincontent" class="w-11/12 mt-12 mx-auto">
+    <h1 class="text-white font-bold text-xl lg:text-2xl text-center mb-2">Sitemap</h1>
     <section id="sitemap">
       <ul class="ml-4 mb-12 list-disc">
         <li class="my-4"><a href="#" class="text-2xl text-blue-200 underline">Home</a></li>
@@ -93,6 +94,6 @@
       </ul>
     </div>
   </footer>
-  <script src="/common/navbar.js"></script> <!--add /pws/-->
+  <script src="/pws/common/navbar.js"></script> <!--add /pws/-->
 </body>
 </html>
