--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
           </a>
         </li>
         <li class="w-full px-2 py-2 hover:bg-indigo-900 md:hover:bg-opacity-0 md:hover:underline md:ml-6">
-          <a href="/pages/resultaten.html" class="flex justify-start items-center">
+          <a href="resultaten.html" class="flex justify-start items-center">
             <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" width="2em" height="2em" style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);" preserveAspectRatio="xMidYMid meet" viewBox="0 0 1024 1024"><path d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0 0 51.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z" fill="#FFFFFF"/><path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448s448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372s372 166.6 372 372s-166.6 372-372 372z" fill="#FFFFFF"/></svg>
             <span>Resultaten</span>
           </a>
         </li>
         <li class="w-full px-2 py-2 hover:bg-indigo-900 md:hover:bg-opacity-0 md:hover:underline md:ml-6">
-          <a href="/pages/verslag.html" class="flex justify-start items-center">
+          <a href="verslag.html" class="flex justify-start items-center">
             <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" width="2em" height="2em" style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);" preserveAspectRatio="xMidYMid meet" viewBox="0 0 1024 1024"><path d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0 0 42 42h216v494zM504 618H320c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zM312 490v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H320c-4.4 0-8 3.6-8 8z" fill="#FFFFFF"/></svg>
             <span>Verslag</span>
           </a>
         </li>
         <li class="w-full px-2 py-2 hover:bg-indigo-900 md:hover:bg-opacity-0 md:hover:underline md:ml-6">
-          <a href="/pages/Toegankelijkheid.html" class="flex justify-start items-center">
+          <a href="Toegankelijkheid.html" class="flex justify-start items-center">
             <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" width="2em" height="2em" style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);" preserveAspectRatio="xMidYMid meet" viewBox="0 0 32 32"><path d="M23 14v-2H9v2h5v2.734l-3.868 6.77l1.736.992L15.58 18h.84l3.712 6.496l1.736-.992L18 16.734V14h5z" fill="#FFFFFF"/><circle cx="16" cy="9" r="2" fill="#FFFFFF"/><path d="M16 30a14 14 0 1 1 14-14a14.016 14.016 0 0 1-14 14zm0-26a12 12 0 1 0 12 12A12.014 12.014 0 0 0 16 4z" fill="#FFFFFF"/></svg>
             <span>Toegankelijkheid</span>
           </a>
@@ -68,17 +68,17 @@
         <div class="bg-blue-700 my-16 py-8 px-12 bg-gradient-to-r from-red-600 to-red-500 lg:w-1/3 lg:text-sm lg:px-8">
           <h4 class="text-2xl font-bold mb-1">Resultaten</h4>
           <p>Een overzicht van de resultaten van ons onderzoek.</p>
-          <a href="pages/html/resultaten.html" class="inline-block bg-gradient-to-r from-indigo-900 to-indigo-700 hover:from-indigo-700 hover:to-indigo-900 px-3 py-2 mt-6">Ga naar Resultaten</a>
+          <a href="resultaten.html" class="inline-block bg-gradient-to-r from-indigo-900 to-indigo-700 hover:from-indigo-700 hover:to-indigo-900 px-3 py-2 mt-6">Ga naar Resultaten</a>
         </div>
         <div class="bg-blue-700 my-16 py-8 px-12 bg-gradient-to-r from-red-600 to-red-500 lg:w-1/3 lg:text-sm lg:px-8">
           <h4 class="text-2xl font-bold mb-1">Verslag</h4>
           <p>Op deze pagina kun je ons gehele verslag lezen. (Ook beschikbaar als .pdf of .docx)</p>
-          <a href="pages/html/verslag.html" class="inline-block bg-gradient-to-r from-indigo-900 to-indigo-700 hover:from-indigo-700 hover:to-indigo-900 px-4 py-2 mt-6">Ga naar Verslag</a>
+          <a href="verslag.html" class="inline-block bg-gradient-to-r from-indigo-900 to-indigo-700 hover:from-indigo-700 hover:to-indigo-900 px-4 py-2 mt-6">Ga naar Verslag</a>
         </div>
         <div class="bg-blue-700 my-16 py-8 px-12 bg-gradient-to-r from-red-600 to-red-500 lg:w-1/3 lg:text-sm lg:px-8">
           <h4 class="text-2xl font-bold mb-1">Toegankelijkheid</h4>
           <p>De eisen aan toegankelijkheid waar deze website aan voldoet.</p>
-          <a href="pages/html/toegankelijkheid.html" class="inline-block bg-gradient-to-r from-indigo-900 to-indigo-700 hover:from-indigo-700 hover:to-indigo-900 px-4 py-2 mt-6">Ga naar Toegankelijkheid</a>
+          <a href="toegankelijkheid.html" class="inline-block bg-gradient-to-r from-indigo-900 to-indigo-700 hover:from-indigo-700 hover:to-indigo-900 px-4 py-2 mt-6">Ga naar Toegankelijkheid</a>
         </div>
       </div>
     </section>
@@ -92,20 +92,20 @@
       <ul class="flex flex-row flex-wrap text-lg justify-center">
         <li><a href="index.html" class="hover:underline">Home</a></li>
         <li><span class="mx-2">·</span></li>
-        <li><a href="/pages/resultaten.html" class="hover:underline">Resultaten</a></li>
+        <li><a href="resultaten.html" class="hover:underline">Resultaten</a></li>
         <li><span class="mx-2">·</span></li>
-        <li><a href="/pages/verslag.html" class="hover:underline">Verslag</a></li>
+        <li><a href="verslag.html" class="hover:underline">Verslag</a></li>
         <li><span class="mx-2">·</span></li>
-        <li><a href="/pages/toegankelijkheid.html" class="hover:underline">Toegankelijkheid</a></li>
+        <li><a href="toegankelijkheid.html" class="hover:underline">Toegankelijkheid</a></li>
         <li><span class="mx-2">·</span></li>
-        <li><a href="https://www.pcc.nu/" class="hover:underline">PCC</a></li>
+        <li><a href="https://www.pcc.nu" class="hover:underline">PCC</a></li>
         <li><span class="mx-2">·</span></li>
-        <li><a href="/pages/sitemap.html" class="hover:underline">Sitemap</a></li>
+        <li><a href="sitemap.html" class="hover:underline">Sitemap</a></li>
         <li><span class="mx-2">·</span></li>
         <li><a href="https://www.github.com/hizude/pws"><svg class="mt-0.5" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" width="1.25em" height="1.25em" style="vertical-align: -0.125em;-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);" preserveAspectRatio="xMidYMid meet" viewBox="0 0 1024 1024"><path d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5C64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9c26.4 39.1 77.9 32.5 104 26c5.7-23.5 17.9-44.5 34.7-60.8c-140.6-25.2-199.2-111-199.2-213c0-49.5 16.3-95 48.3-131.7c-20.4-60.5 1.9-112.3 4.9-120c58.1-5.2 118.5 41.6 123.2 45.3c33-8.9 70.7-13.6 112.9-13.6c42.4 0 80.2 4.9 113.5 13.9c11.3-8.6 67.3-48.8 121.3-43.9c2.9 7.7 24.7 58.3 5.5 118c32.4 36.8 48.9 82.7 48.9 132.3c0 102.2-59 188.1-200 212.9a127.5 127.5 0 0 1 38.1 91v112.5c.8 9 0 17.9 15 17.9c177.1-59.7 304.6-227 304.6-424.1c0-247.2-200.4-447.3-447.5-447.3z" fill="#FFFFFF"/></svg></a></li>
       </ul>
     </div>
   </footer>
-  <script src="/pws/common/navbar.js"></script>
+  <script src="common/navbar.js"></script> <!--add /pws/-->
 </body>
 </html>
