--- a/sitemap.html
+++ b/sitemap.html
@@ -4,7 +4,7 @@
   <title>Sitemap | PWS</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="/common/styles.css" rel="stylesheet">
+  <link href="/pws/common/styles.css" rel="stylesheet">
 </head>
 <body class="text-white font-sans bg-black">
   <header>
