--- a/toegankelijkheid.html
+++ b/toegankelijkheid.html
@@ -4,7 +4,7 @@
   <title>Toegankelijkheid | PWS</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="/common/styles.css" rel="stylesheet">
+  <link href="/pws/common/styles.css" rel="stylesheet">
 </head>
 <body class="text-white font-sans bg-black">
   <header>
@@ -298,7 +298,7 @@
       </ul>
     </div>
   </footer>
-  <scrpws/common/navbar.js"></script> <!--add /pws/-->
+  <script src="/pws/common/navbar.js"></script>
   <style>
     th, td {
       text-align: left;
