--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Home | PWS</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="common/styles.css" rel="stylesheet">
+  <link href="/pws/common/styles.css" rel="stylesheet">
 </head>
 <body class="text-white font-sans bg-black">
   <header>
@@ -106,6 +106,6 @@
       </ul>
     </div>
   </footer>
-  <script src="common/navbar.js"></script> <!--add /pws/-->
+  <script src="/pws/common/navbar.js"></script> <!--add /pws/-->
 </body>
 </html>
