fixed broken links

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </a>
         </li>
         <li class="w-full px-2 py-2 hover:bg-indigo-900 md:hover:bg-opacity-0 md:hover:underline md:ml-6">
-          <a href="Toegankelijkheid.html" class="flex justify-start items-center">
+          <a href="toegankelijkheid.html" class="flex justify-start items-center">
             <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" width="2em" height="2em" style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);" preserveAspectRatio="xMidYMid meet" viewBox="0 0 32 32"><path d="M23 14v-2H9v2h5v2.734l-3.868 6.77l1.736.992L15.58 18h.84l3.712 6.496l1.736-.992L18 16.734V14h5z" fill="#FFFFFF"/><circle cx="16" cy="9" r="2" fill="#FFFFFF"/><path d="M16 30a14 14 0 1 1 14-14a14.016 14.016 0 0 1-14 14zm0-26a12 12 0 1 0 12 12A12.014 12.014 0 0 0 16 4z" fill="#FFFFFF"/></svg>
             <span>Toegankelijkheid</span>
           </a>
