--- a/toegankelijkheid.html
+++ b/toegankelijkheid.html
@@ -29,7 +29,7 @@
       </div>
       <ul id="menu" class="hidden text-xl mt-4 flex flex-col items-start md:block md:mt-0 md:flex md:flex-row md:items-center md:text-lg">
         <li class="w-full px-2 py-2 hover:bg-indigo-900 md:hover:bg-opacity-0 md:hover:underline md:ml-6">
-          <aindex.html" class="flex justify-start items-center">
+          <a href="index.html" class="flex justify-start items-center">
             <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" width="2em" height="2em" style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);" preserveAspectRatio="xMidYMid meet" viewBox="0 0 1024 1024"><path d="M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 0 0-44.4 0L77.5 505a63.9 63.9 0 0 0-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0 0 18.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204zm217.9-325.7V868H632V640c0-22.1-17.9-40-40-40H432c-22.1 0-40 17.9-40 40v228H238.1V542.3h-96l370-369.7l23.1 23.1L882 542.3h-96.1z" fill="#FFFFFF"/></svg>
             <span>Home</span>
           </a>
@@ -47,7 +47,7 @@
           </a>
         </li>
         <li class="w-full px-2 py-2 hover:bg-indigo-900 md:hover:bg-opacity-0 md:hover:underline md:ml-6">
-          <a href="Toegankelijkheid.html" class="flex justify-start items-center">
+          <a href="toegankelijkheid.html" class="flex justify-start items-center">
             <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" width="2em" height="2em" style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);" preserveAspectRatio="xMidYMid meet" viewBox="0 0 32 32"><path d="M23 14v-2H9v2h5v2.734l-3.868 6.77l1.736.992L15.58 18h.84l3.712 6.496l1.736-.992L18 16.734V14h5z" fill="#FFFFFF"/><circle cx="16" cy="9" r="2" fill="#FFFFFF"/><path d="M16 30a14 14 0 1 1 14-14a14.016 14.016 0 0 1-14 14zm0-26a12 12 0 1 0 12 12A12.014 12.014 0 0 0 16 4z" fill="#FFFFFF"/></svg>
             <span>Toegankelijkheid</span>
           </a>
