--- a/verslag.html
+++ b/verslag.html
@@ -98,6 +98,17 @@
   </aside>
   <main id="maincontent" class="pl-6 pr-6 mt-6 lg:ml-56 mx-auto">
     <figure class="italic">*dit web-verslag is niet identiek aan het verslag in .pdf- of .docx-vorm. Er zijn veranderingen doorgebracht om het verslag als webpagina zo goed als mogelijk vorm te geven.</figure>
+    <div class="mt-4">
+      <p>Download hier het verslag als .pdf of .docx:</p>
+      <ul class="list-disc ml-4">
+        <li>
+          <a href="/pws/verslag_files/schriftelijk verslag_toegankelijkheid_websites_pws_PDF.pdf" class="text-blue-300 underline">schriftelijk verslag toegankelijkheid websites pws  PDF.pdf (PDF, 444 KB)</a>
+        </li>
+        <li>
+          <a href="/pws/verslag_files/schriftelijk_verslag_toegankelijkheid_websites_pws_DOCX.docx" class="text-blue-300 underline">schriftelijk verslag toegankelijkheid websites pws  DOCX.pdf (DOCX, 183 KB)</a>
+        </li>
+      </ul>
+    </div>
     <section id="voorpagina">
       <h1 class="text-2xl mt-64 font-bold text-center">Toegankelijkheid van websites</h1>
       <h2 class="mt-2 text-lg text-center">profielwerkstuk 5 havo</h2>
