changed links for github pages

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <title>Home | PWS</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- <link href="/pws/common/styles.css" rel="stylesheet"> -->
-  <link href="common/styles.css" rel="stylesheet">
+  <link href="/pws/common/styles.css" rel="stylesheet">
+  <!-- <link href="common/styles.css" rel="stylesheet"> -->
 </head>
 <body class="text-white font-sans bg-black">
   <header>
@@ -107,7 +107,7 @@
       </ul>
     </div>
   </footer>
-  <!-- <script src="/pws/common/navbar.js"></script> -->
-  <script src="common/navbar.js"></script>
+  <script src="/pws/common/navbar.js"></script>
+  <!-- <script src="common/navbar.js"></script> -->
 </body>
 </html>
