--- a/verslag.html
+++ b/verslag.html
@@ -4,8 +4,8 @@
   <title>Verslag | PWS</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- <link href="/pws/common/styles.css" rel="stylesheet"> -->
-  <link rel="stylesheet" href="common/styles.css">
+  <link href="/pws/common/styles.css" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="common/styles.css"> -->
 </head>
 <body class="text-white font-sans bg-black">
   <header class="lg:ml-56">
@@ -1095,7 +1095,7 @@
       </ul>
     </div>
   </footer>
-  <!-- <script src="/pws/common/navbar.js"></script> -->
-  <script src="common/navbar.js"></script>
+  <script src="/pws/common/navbar.js"></script>
+  <!-- <script src="common/navbar.js"></script> -->
 </body>
 </html>
