--- a/resultaten.html
+++ b/resultaten.html
@@ -4,8 +4,8 @@
   <title>Resultaten | PWS</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- <link href="/pws/common/styles.css" rel="stylesheet"> -->
-  <link rel="stylesheet" href="common/styles.css">
+  <link href="/pws/common/styles.css" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="common/styles.css"> -->
 </head>
 <body class="text-white font-sans bg-black">
   <header>
@@ -918,8 +918,8 @@
       </ul>
     </div>
   </footer>
-  <!-- <script src="/pws/common/navbar.js"></script> -->
-  <script src="common/navbar.js"></script>
+  <script src="/pws/common/navbar.js"></script>
+  <!-- <script src="common/navbar.js"></script> -->
   <style>
     th, td {
       text-align: left;
