fixed file url, added files to sitemap

--- a/sitemap.html
+++ b/sitemap.html
@@ -63,8 +63,8 @@
         <li class="my-4"><a href="index.html" class="text-2xl text-blue-200 underline">Home</a></li>
         <li class="my-4"><a href="resultaten.html" class="text-2xl text-blue-200 underline">Resultaten</a></li>
         <li class="my-4"><a href="verslag.html" class="text-2xl text-blue-200 underline">Verslag</a></li>
-            <li class="my-2 ml-8"><a href="#" class="text-lg text-blue-200 underline">PWS toegankelijkheid website (xmb, .pdf)</a></li>
-            <li class="my-2 ml-8"><a href="#" class="text-lg text-blue-200 underline">PWS toegankelijkheid website (xmb, .docx)</a></li>
+            <li class="my-2 ml-8"><a href="/pws/verslag_files/schriftelijk_verslag_toegankelijkheid_websites_pws_PDF.pdf" class="text-blue-300 underline">schriftelijk verslag toegankelijkheid websites pws  PDF.pdf (PDF, 444 KB)</a></li>
+            <li class="my-2 ml-8"><a href="/pws/verslag_files/schriftelijk_verslag_toegankelijkheid_websites_pws_DOCX.docx" class="text-blue-300 underline">schriftelijk verslag toegankelijkheid websites pws  DOCX.pdf (DOCX, 183 KB)</a></li>
         <li class="my-4"><a href="toegankelijkheid.html" class="text-2xl text-blue-200 underline">Toegankelijkheid</a></li>
         <li class="my-4"><a href="https://www.pcc.nu" class="text-2xl text-blue-200 underline">PCC</a></li>
         <li class="my-4"><a href="sitemap.html" class="text-2xl text-blue-200 underline">Sitemap</a></li>
