--- a/verslag.html
+++ b/verslag.html
@@ -102,7 +102,7 @@
       <p>Download hier het verslag als .pdf of .docx:</p>
       <ul class="list-disc ml-4">
         <li>
-          <a href="/pws/verslag_files/schriftelijk verslag_toegankelijkheid_websites_pws_PDF.pdf" class="text-blue-300 underline">schriftelijk verslag toegankelijkheid websites pws  PDF.pdf (PDF, 444 KB)</a>
+          <a href="/pws/verslag_files/schriftelijk_verslag_toegankelijkheid_websites_pws_PDF.pdf" class="text-blue-300 underline">schriftelijk verslag toegankelijkheid websites pws  PDF.pdf (PDF, 444 KB)</a>
         </li>
         <li>
           <a href="/pws/verslag_files/schriftelijk_verslag_toegankelijkheid_websites_pws_DOCX.docx" class="text-blue-300 underline">schriftelijk verslag toegankelijkheid websites pws  DOCX.pdf (DOCX, 183 KB)</a>
